--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
   "currencyList": [
    
-    { "value": "USD", "label": "United States (US $)" },
+    { "value": "USD", "label": "United States (US $)" }
    
   ],
   "languageList": [
